--- a/zad2/app/src/main/res/layout/fragment_third.xml
+++ b/zad2/app/src/main/res/layout/fragment_third.xml
@@ -6,17 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.page3.ThirdFragment">
 
-
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity"
         android:columnCount="2"
-        android:useDefaultMargins="true">
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:useDefaultMargins="true"
+        tools:context=".MainActivity">
 
         <Spinner
             android:id="@+id/sex_spinner"
@@ -25,19 +24,18 @@
             android:layout_row="0"
             android:layout_column="0"
             android:layout_columnSpan="2"
-            android:elevation="4dp"
-            />
+            android:elevation="4dp" />
 
         <EditText
+            android:id="@+id/weightEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:id="@+id/weightEditText"
             android:layout_column="0"
+            android:layout_columnSpan="2"
             android:digits="0123456789"
-            android:maxLength="6"
             android:ems="10"
-            android:layout_columnSpan="2"/>
+            android:inputType="number"
+            android:maxLength="6" />
 
         <TextView
             android:id="@+id/weightTextView"
@@ -52,16 +50,17 @@
             android:hint="Podaj wagę"
             android:padding="12dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
+            android:id="@+id/heightEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:id="@+id/heightEditText"
             android:layout_column="0"
+            android:layout_columnSpan="2"
             android:digits="0123456789"
-            android:maxLength="6"
             android:ems="10"
-            android:layout_columnSpan="2"/>
+            android:inputType="number"
+            android:maxLength="6" />
 
         <TextView
             android:id="@+id/heightTextView"
@@ -78,15 +77,15 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
+            android:id="@+id/ageEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:id="@+id/ageEditText"
             android:layout_column="0"
+            android:layout_columnSpan="2"
             android:digits="0123456789"
-            android:maxLength="6"
             android:ems="10"
-            android:layout_columnSpan="2"/>
+            android:inputType="number"
+            android:maxLength="6" />
 
         <TextView
             android:id="@+id/ageTextView"
@@ -107,11 +106,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="50dp"
+            android:background="#0984e3"
             android:text="Oblicz"
             android:textColor="#fafafa"
-            android:textSize="28sp"
-            android:background="#0984e3"
-            />
+            android:textSize="28sp" />
+
         <TextView
             android:id="@+id/resultLabelTextView"
             android:layout_width="wrap_content"
@@ -121,19 +120,16 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
+            android:id="@+id/resultTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/resultTextView"
             android:layout_gravity="fill_horizontal"
             android:background="@color/result_background"
+            android:elevation="4dp"
             android:gravity="center"
             android:padding="12dp"
-            android:elevation="4dp"/>
-
-
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </GridLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
